parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass02.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass02.json
---
Ok(
    Array(
        [
            Array(
                [
                    Array(
                        [
                            Array(
                                [
                                    Array(
                                        [
                                            Array(
                                                [
                                                    Array(
                                                        [
                                                            Array(
                                                                [
                                                                    Array(
                                                                        [
                                                                            Array(
                                                                                [
                                                                                    Array(
                                                                                        [
                                                                                            Array(
                                                                                                [
                                                                                                    Array(
                                                                                                        [
                                                                                                            Array(
                                                                                                                [
                                                                                                                    Array(
                                                                                                                        [
                                                                                                                            Array(
                                                                                                                                [
                                                                                                                                    Array(
                                                                                                                                        [
                                                                                                                                            Array(
                                                                                                                                                [
                                                                                                                                                    Array(
                                                                                                                                                        [
                                                                                                                                                            String(
                                                                                                                                                                "Not too deep",
                                                                                                                                                            ),
                                                                                                                                                        ],
                                                                                                                                                    ),
                                                                                                                                                ],
                                                                                                                                            ),
                                                                                                                                        ],
                                                                                                                                    ),
                                                                                                                                ],
                                                                                                                            ),
                                                                                                                        ],
                                                                                                                    ),
                                                                                                                ],
                                                                                                            ),
                                                                                                        ],
                                                                                                    ),
                                                                                                ],
                                                                                            ),
                                                                                        ],
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                        ],
                                                                    ),
                                                                ],
                                                            ),
                                                        ],
                                                    ),
                                                ],
                                            ),
                                        ],
                                    ),
                                ],
                            ),
                        ],
                    ),
                ],
            ),
        ],
    ),
)
