parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass05.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass05.json
---
Ok(
    Number(
        1.2345678900000002e34,
    ),
)
