parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass06.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass06.json
---
Ok(
    Boolean(
        true,
    ),
)
