parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass07.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass07.json
---
Ok(
    Null,
)
