parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass08.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass08.json
---
Ok(
    Number(
        1.0,
    ),
)
