parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass10.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass10.json
---
Ok(
    String(
        "124",
    ),
)
