parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass11.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass11.json
---
Ok(
    Number(
        4.611686018427388e18,
    ),
)
