parser/src/snapshots/parser__parser__tests__parse_test_data@pass__pass12.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/pass/pass12.json
---
Ok(
    Number(
        2147483648.0,
    ),
)
